styles.css
/* ... */
section,
footer {
  padding: 60px 0;
}
li {
  list-style: none;
}
li a {
  text-decoration: none;
  color: #151b19;
  text-transform: uppercase;
  font-weight: 700;
  padding: 3px 5px;
}
button {
  cursor: pointer;
}
img {
  width: 100%;
}
h1 {
  font-weight: 400;
  max-width: 450px;
  line-height: 1.4;
  font-size: 2rem;
}
.container {
  max-width: 1200px;
  margin: 0 auto;
}
.wrapper {
  max-width: 1000px;
  margin: 0 auto;
}
.bold {
  font-weight: 600;
}
.secondary-heading {
  font-weight: 500;
  text-transform: uppercase;
}
.translucent {
  color: rgba(0, 0, 0, 0.6);
  max-width: 400px;
  font-size: 0.9rem;
}
.link {
  display: inline-block;
  padding: 3px 0;
  text-decoration: none;
  border-bottom: 2px solid #151b19;
  color: #151b19;
  margin-top: 15px;
  text-transform: uppercase;
  font-weight: 500;
  font-size: 0.9rem;
}
.image-preview {
  background: none;
  box-shadow: 5px 5px 40px rgba(0, 0, 0, 0.05);
  display: flex;
  align-items: center;
  justify-content: center;
}

/* header contents */
header {
  background: #f4f5f7;
  min-height: 20vh;
}
nav {
  display: flex;
  align-items: center;
  justify-content: space-between;
  min-height: 15vh;
}
.nav-links {
  display: flex;
  align-items: center;
  justify-content: space-between;
  width: 60%;
}
.nav-links a {
  font-weight: 500;
}
.go-back img {
  width: 30px;
  margin: 15px 0 0 15px;
}
.logo {
  font-size: 2rem;
  font-weight: 700;
}
.dot {
  color: #34cd99;
}
.hamburger,
.cart,
.qty-add {
  display: inline-block;
  padding: 2px 5px 0;
  background: #48c4a0;
  border: none;
  border-radius: 3px;
  cursor: pointer;
}
.hamburger {
  display: none;
}
.cart,
.qty-add {
  background: none;
}
.hamburger img,
.search img {
  width: 30px;
}

/* main content */
.hero-section,
.sales-section,
.products-section,
.items-section {
  position: relative;
  top: -5vh;
}
.hero-section {
  display: grid;
  grid-template-columns: 1fr 1fr;
  gap: 30px;
}
.hero-main-banner {
  background: #d2e9e3;
  padding: 60px 0;
  grid-column: 1/3;
  min-height: 500px;
}
.hero-main-banner p {
  margin-bottom: 60px;
  color: #f5ad34;
}
.hero-main-banner .wrapper {
  display: grid;
  grid-template-columns: 1fr 1fr;
}
.hero-main-banner .wrapper img {
  max-width: 350px;
}
.hero-banner {
  background: #f4f5f7;
  padding: 30px 60px;
  min-height: 300px;
  position: relative;
  overflow: hidden;
}
.content {
  flex: 1;
}
.hero-banner img {
  max-width: 250px;
}
.banner-chair {
  position: absolute;
  bottom: -80px;
  left: 0;
}
.banner-desk {
  position: absolute;
  bottom: 0;
  right: -10px;
}
.sales-top {
  display: flex;
  justify-content: space-between;
}
.tabs {
  display: flex;
  align-items: center;
}
.tabs li {
  padding-right: 50px;
}
.tabs a {
  display: inline-block;
  padding: 3px 0;
}
.tabs a.active {
  border-bottom: 2px solid #6e7ab7;
  color: #6e7ab7;
}
.action {
  background: none;
  border: none;
  font-weight: 600;
  text-transform: uppercase;
  padding: 5px 7px;
}
.tabs-contents {
  padding: 30px 0;
}
.tabs-content {
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  gap: 30px;
  display: none;
}
.tabs-content.active {
  display: grid;
}
h4.name {
  font-size: 1rem;
  color: #a7a7a7;
  font-weight: 500;
  font-size: 0.9rem;
}
p.price {
  font-weight: 700;
  font-size: 1.1rem;
}
.more {
  background: #fff;
  position: absolute;
  bottom: 0;
  left: 0;
  min-width: 100%;
  display: flex;
  align-items: center;
  justify-content: space-between;
  border-bottom: 2px solid #48c4a0;
  padding: 0 5px;
  box-shadow: 2px 0 15px rgba(0, 0, 0, 0.05);
}
.fav,
.add,
.info {
  background: none;
  border: none;
  padding: 3px;
  display: flex;
  align-items: center;
}
.add {
  flex: 1;
  justify-content: center;
  border-left: 2px solid #f4f5f7;
  border-right: 2px solid #f4f5f7;
}
.add h4 {
  text-transform: uppercase;
  /* font-weight: 500; */
}
.items .image-preview {
  border-radius: 15px;
  height: 200px;
  padding: 50px;
  margin-bottom: 15px;
  position: relative;
}
.btn {
  margin: 30px auto 0;
  display: block;
  padding: 10px 30px;
  background: none;
  border: 2px solid #b9e8da;
  border-radius: 3px;
  font-weight: 500;
  text-transform: uppercase;
}
.head {
  background: #f4f5f7;
  padding: 30px 0;
  margin-bottom: 60px;
}
.products-contents {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  gap: 30px;
}
.products-grid {
  display: grid;
  gap: 30px;
}
.products-grid h3 {
  border-bottom: 2px solid #f5f5f5;
  padding: 10px 0;
  text-transform: uppercase;
}
.product {
  display: flex;
}
.product .image-preview {
  border-radius: 10px;
  width: 100px;
  height: 100px;
  padding: 10px;
  margin-right: 20px;
}
.showcase {
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  gap: 15px;
}
.case {
  padding: 60px 30px;
}
.category {
  font-size: 0.9rem;
  font-weight: 700;
  text-transform: uppercase;
}
.description {
  font-size: 1.1rem;
}
.case__1 {
  background: #f9d9da;
  grid-column: 1/3;
}
.case__2 {
  background: #daf3ed;
}
.case__3 {
  background: #ffedcd;
  grid-column: 4/5;
  grid-row: 1/3;
}
.case__4 {
  background: #e2f0df;
}
.case__5 {
  background: #d8dbec;
  grid-column: 2/4;
}
.case__1 .category {
  color: #fd6a76;
}
.case__2 .category {
  color: #65cead;
}
.case__3 .category {
  color: #feb237;
}
.case__4 .category {
  color: #82b574;
}
.case__5 .category {
  color: #8089c1;
}
/* decoration-content */
.decoration {
  display: flex;
}
.decoration-content {
  min-width: 250px;
  margin-right: 15px;
}
.decoration-grid {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  gap: 15px;
}
.decoration .image-preview {
  border-radius: 18px;
  height: 300px;
  margin-bottom: 15px;
}
.divider {
  height: 2px;
  background: #f4f5f7;
  margin: 60px 0;
}
.gallery {
  display: grid;
  grid-template-columns: repeat(5, 1fr);
}
.gallery img {
  width: 100%;
  height: 200px;
  object-fit: cover;
}
img.main {
  grid-column: 4/6;
}
footer {
  background: #48c4a0;
  color: #fff;
  font-size: 0.9rem;
}
/* ... */

